@@ -15,7 +15,7 @@
     <properties>
         <avro.version>1.8.2</avro.version>
         <commons-csv.version>1.4</commons-csv.version>
-        <commons-io.version>1.4</commons-io.version>   
+        <commons-io.version>2.6</commons-io.version>   
         <commons-lang.version>2.6</commons-lang.version>     
         <hadoop.version>2.9.1</hadoop.version>
         <log4j.version>1.2.15</log4j.version>
